--- a/src/templates/profile/index.html
+++ b/src/templates/profile/index.html
@@ -16,7 +16,7 @@
         Active characters
       </li>
       {% if active_chars %}
-        {% for c, account_key in active_chars %}
+        {% for c in active_chars %}
           <li>
             <a href="/character/{{ c.char_id }}">
               <i class="icon-user"></i>
@@ -31,7 +31,7 @@
         Inactive characters
       </li>
       {% if inactive_chars %}
-        {% for c, account_key in inactive_chars %}
+        {% for c in inactive_chars %}
           <li>
             <a href="/character/{{ c.char_id }}">
               <i class="icon-user"></i>
