--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,7 +20,7 @@
     {% block csshead %}{% endblock %}
     <!-- end CSS-->
 
-    <script src="/static/js/lib/modernizr-2.0.6.min.js"></script>
+    <!-- <script src="/static/js/lib/modernizr-2.0.6.min.js"></script> -->
   </head>
 
   <body>
@@ -34,6 +34,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     {% endif %}
     <script src="/static/js/lib/bootstrap.js" type="text/javascript"></script>
+    <script src="/static/js/lib/underscore-min.js"></script>
+    <script src="/static/js/main.js" type="text/javascript"></script>
     <script type="text/javascript">
     </script>
     {% block endbody %}{% endblock %}
