--- a/src/templates/character/index.html
+++ b/src/templates/character/index.html
@@ -11,7 +11,7 @@
       <img src="http://image.eveonline.com/character/{{ character.char_id }}_64.jpg"class="portrait"/>
       <div class="header-subcontainer">
         <h1>{{ character.name }}</h1>
-        <span>Last updated: {{ character.last_update }}</span>
+        <span>Last updated: {% if character.last_update %}{{ character.last_update|datetime_fmt }}{% else %} Never {% endif %}</span>
       </div>
     </div>
   </div>
@@ -31,13 +31,57 @@
   </div>
   {% endif %}
 </div>
+
+{% if character.active %}
+<div class="row">
+  <div id="transactions" class="span8">
+  </div>
+  <div class="span4">
+  </div>
+</div>
+{% endif %}
 {% endblock %}
 
 {% block endbody %}
+<script type="text/javascript">
+
+  mv.data.character = {
+    name: '{{ character.name|e }}',
+    id: '{{ character.char_id }}'
+  }
+
+  {% raw %}
+  mv.templates = {}
+  mv.templates.transactionTable = ' \
+      <table class="table table-transactions table-bordered table-condensed"> \
+      <thead> \
+        <tr> \
+          <th>Commodity</th> \
+          <th>Date</th> \
+          <th>Quantity</th> \
+          <th>Unit Price</th> \
+          <th>Balance Change</th> \
+        </tr> \
+      </thead> \
+      <tbody> \
+      {{#transactions}} \
+      <tr class="type{{ transaction_type }}"> \
+        <td>{{ type_name }}</td> \
+        <td>{{ transaction_date.str }}</td> \
+        <td>{{ quantity }}</td> \
+        <td class="currency">{{ unit_price_str }}</td> \
+        <td class="currency">{{ balance_change_str }}</td> \
+      </tr> \
+      {{/transactions}} \
+      </tbody> \
+      </table>';
+  {% endraw %}
+</script>
 {% if debug %}
 <script src="/static/js/lib/d3.v2.min.js"></script>
 {% else %}
 <script src="http://d3js.org/d3.v2.js"></script>
 {% endif %}
+<script src="/static/js/lib/mustache.jquery.js"></script>
 <script src="/static/js/character.js"></script>
 {% endblock %}
