--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -10,3 +10,11 @@ form h2,
 form h3 {
   margin-bottom:          10px;
 }
+
+li, p {
+  font-size:              1.2em;
+}
+
+.well > h2 {
+  margin-bottom:          8px;
+}
