--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,5 +1,6 @@
 body {
   font-size:              62.5%;
+  overflow-y:             scroll;
 }
 
 header {
@@ -17,4 +18,16 @@ li, p {
 
 .well > h2 {
   margin-bottom:          8px;
+}
+
+table {
+  font-size:              1.3em;
+}
+
+
+.progress-container {
+  width:                  50%;
+  position:               relative;
+  left:                   25%;
+  margin:                 10px 0;
 }
