--- a/src/templates/character/transactions.html
+++ b/src/templates/character/transactions.html
@@ -1,38 +1,18 @@
 {% extends 'character/base.html' %}
 
 {% block rightcontent %}
-  <div class="tabbable">
-    <ul class="nav nav-tabs">
-      <li class="active"><a href="#all" data-toggle="tab">All transactions</a></li>
-      <li><a href="#calculator" data-toggle="tab">Calculator</a></li>
-    </ul>
-    <div class="tab-content">
-      <div class="tab-pane active" id="all">
-        <h2>Latest sell transactions</h2>
-        <div class="sell-transactions transactions"></div>
-        <h2>Latest buy transactions</h2>
-        <div class="buy-transactions transactions"></div>
-      </div>
-      <div class="tab-pane" id="calculator">
-        <div class="well" id="average-container">
-          <h2>History average</h2>
-          <form id="form-average" class="form-inline" action="/stat/transactions/average" method="GET">
-            <input name="commodity_name" type="text" class="span4" placeholder="Commodity name" />
-            <input name="quantity" type="text" class="input-small" placeholder="Max quantity" />
-            <select name="transaction_type" class="input-small">
-              <option value="{{ WalletTransaction.BUY }}">Buy</option>
-              <option value="{{ WalletTransaction.SELL }}">Sell</option>
-            </select>
-            <button type="submit" class="btn">Go nuts!</button>
-          </form>
-          <div class="progress-container">
-          <div class="progress progress-striped active" style="display: none">
-            <div class="bar" style="width: 100%"></div>
-          </div>
-          </div>
-          <div class="content"></div>
-        </div>
-      </div>
+<h2>Latest sell transactions</h2>
+<div class="sell-transactions transactions">
+  <div class="progress-container">
+    <div class="progress progress-striped active">
+      <div class="bar" style="width: 100%"></div>
+    </div>
+  </div>
+<h2>Latest buy transactions</h2>
+<div class="buy-transactions transactions">
+  <div class="progress-container">
+    <div class="progress progress-striped active">
+      <div class="bar" style="width: 100%"></div>
     </div>
   </div>
 </div>
@@ -70,5 +50,6 @@
       {{/transactions}} \
       </tbody> \
       </table>';
+
   {% endraw %}
 {% endblock %}
